# termclock

./: README.md  install.sh  pyproject.toml  setup.py  termclock.py  uninstall.sh
fonts/: block.font  dots.font  outline.font  rounded.font  star.font
themes/: dark.theme  neon.theme
